# self-learning

./: readme.md
Algorithms/algorithms/sortings/: mergesort.py  quicksort.py
Algorithms/algorithms/trees/: tree.py
Algorithms/event-loop/: idle.c
Frameworks/grpc/: book.proto
Kotlin/src/: HelloWorld.kt
Libraries/opencv/: blank_image.cc  histo.cc  histogram.cc  line_detection.cc  read_image.cc  read_video.cc  video_capture.cc  write_image.cc  write_video.cc
Networks/Socket/: README.md
Networks/Socket/src/: client.c  (+2 more)
OperatingSystem/practices/: .RData  .Rhistory  01_boot_barebon.asm
ProgrammingLanguages/Cpp/: ion.c  math.h  pointer.c
ProgrammingLanguages/NodeJS/NodeAddons/: .gitignore  CMakeLists.txt  binding.gyp  package.json  tsconfig.json
ProgrammingLanguages/NodeJS/NodeAddons/lib/: async.ts  queue.ts  server.ts
ProgrammingLanguages/NodeJS/NodeAddons/src/: async.cc  async_nan.cc  main.cc  withnan.cc
ProgrammingLanguages/Python/: .gitignore
ProgrammingLanguages/Rust/mysql-rest/: Cargo.toml
ProgrammingLanguages/Rust/mysql-rest/migrations/2018-06-23-134344_heroes/: up.sql
ProgrammingLanguages/Rust/mysql-rest/src/: db.rs  hero.rs  main.rs
Python/async/: stdin.py
Robotics/: .gitignore
Rust/fundamental/: Cargo.toml
Rust/restapi/: Cargo.toml  readme.md
Rust/starter/: .gitignore  Cargo.toml
Tools/phd/: .gitignore  build.gradle  settings.gradle
event-loop/: uv.c
opencv/: .editorconfig  blur.cc  morphology.cc  mouse_event.cc  read_webcame.cc  sobel.cc
todoapp/rust-vue/: .gitignore  package.json  readme.md  tsconfig.json  tslint.json
(+205 files in other folders)
